# IconWrangler

./: CMakeLists.txt  README.md
IconWrangler/: Arguments.cpp  Arguments.h  ArgumentsTest.cpp  Desktop.cpp  Desktop.h  DesktopTest.cpp  Util.cpp  Util.h  UtilTest.cpp  main.cpp
